tests/ui/suggestions/unsized-function-parameter.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/unsized-function-parameter.rs:5:14
   |
LL | fn foo1(bar: str) {}
   |              ^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
   = help: unsized fn params are gated as an unstable feature
help: function arguments must have a statically known size, borrowed types always have a known size
   |
LL | fn foo1(bar: &str) {}
   |              +

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/unsized-function-parameter.rs:11:15
   |
LL | fn foo2(_bar: str) {}
   |               ^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
   = help: unsized fn params are gated as an unstable feature
help: function arguments must have a statically known size, borrowed types always have a known size
   |
LL | fn foo2(_bar: &str) {}
   |               +

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/unsized-function-parameter.rs:17:12
   |
LL | fn foo3(_: str) {}
   |            ^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
   = help: unsized fn params are gated as an unstable feature
help: function arguments must have a statically known size, borrowed types always have a known size
   |
LL | fn foo3(_: &str) {}
   |            +

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
